# rusty_conch

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  NOTICE  README.md  THIRD_PARTY.md  config.example.toml  phase_c_docked_drag_snap.md  phase_next_plugin_docked_view.md
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_issue.md
.github/workflows/: ci.yml  create-release.yml  generate_changelog.sh  release.yml  upload_asset.sh
crates/conch_app/: Cargo.toml
crates/conch_app/icons/: conch.icns
crates/conch_app/src/: app.rs  context_menu.rs  dialogs.rs  extra_window.rs  icons.rs  input.rs  ipc.rs  macos_menu.rs  main.rs  mouse.rs  notifications.rs  plugins.rs  sessions.rs  shortcuts.rs  sidebar_handler.rs  ssh.rs  state.rs  tab_bar.rs  ui_theme.rs  watcher.rs  window_state.rs
crates/conch_app/src/host/: bridge.rs  dialogs.rs  mod.rs  panel_renderer.rs  plugin_lifecycle.rs  plugin_manager_ui.rs  plugin_panels.rs  session_bridge.rs
crates/conch_app/src/menu_bar/: egui_menu.rs  mod.rs  native_macos.rs
crates/conch_app/src/platform/: capabilities.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/conch_app/src/terminal/: color.rs  size_info.rs  widget.rs
crates/conch_app/src/ui/: bottom_panel.rs  file_browser.rs  mod.rs  session_panel.rs  session_panel_plugins.rs  sidebar.rs  widgets.rs
crates/conch_app/src/ui/dialogs/: mod.rs  new_connection.rs  notification_history.rs  plugin_dialog.rs  preferences.rs  tunnels.rs
crates/conch_core/: Cargo.toml
crates/conch_core/src/: color_scheme.rs  config.rs  lib.rs  ssh_config.rs
crates/conch_core/src/config/: colors.rs  conch.rs  font.rs  mod.rs  persistent.rs  terminal.rs  window.rs
crates/conch_core/src/models/: server.rs
crates/conch_mobile/: Cargo.toml  tauri.conf.json
crates/conch_mobile/capabilities/: default.json
crates/conch_mobile/frontend-mobile/: connections.js  index.html  profile.js  tab-bar.js  vault.js
crates/conch_mobile/frontend-mobile/styles/: main.css  terminal.css
crates/conch_mobile/src/: callbacks.rs  commands.rs  lib.rs  main.rs
crates/conch_plugin/: Cargo.toml  build.rs
crates/conch_plugin/src/: bus.rs  checker.rs  host_api.rs  jvm_stub.rs  lib.rs  manager.rs
crates/conch_plugin/src/api/: app.rs  mod.rs  ui.rs
crates/conch_plugin/src/jvm/: mod.rs  runtime.rs
crates/conch_plugin/src/lua/: api.rs  metadata.rs  mod.rs  runner.rs
crates/conch_plugin/src/lua/api/: app.rs  mod.rs  net.rs  session.rs  ui.rs
crates/conch_plugin/src/native/: library.rs  lifecycle.rs  manager.rs  mod.rs
crates/conch_plugin_sdk/: Cargo.toml
crates/conch_pty/: Cargo.toml
crates/conch_pty/src/: connector.rs  lib.rs  pty.rs
crates/conch_remote/: Cargo.toml
crates/conch_remote/src/: callbacks.rs  config.rs  handler.rs  lib.rs  sftp.rs  ssh.rs  transfer.rs  tunnel.rs
crates/conch_tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/conch_tauri/capabilities/: default.json
crates/conch_tauri/frontend/: commands.js  files-panel.js  index.html  keygen.js  pane-dnd.js  plugin-manager.js  plugin-widgets.js  settings.html  settings.js  split-pane.js  split-tree.js  ssh-panel.js  titlebar.js  toast.js  tool-window-manager.js  tunnel-manager.js  utils.js  vault.js
crates/conch_tauri/frontend/app/: backend-router.js  command-palette-runtime.js  dialog-runtime.js  event-wiring-runtime.js  main-runtime.js  manager-compose-runtime.js  manager-delegates-runtime.js  menu-actions.js  orchestration-runtime.js  shortcut-runtime.js  tab-manager.js  tmux-id-map.js  tool-window-runtime.js
crates/conch_tauri/frontend/app/core/: commands.js  config-service.js
crates/conch_tauri/frontend/app/features/settings/: constants.js  sections-appearance.js
crates/conch_tauri/frontend/app/layout/: tool-window-manager.js
crates/conch_tauri/frontend/app/panels/: files-panel.js  plugin-widgets.js  settings.js  ssh-panel.js  tmux-panel.js
crates/conch_tauri/frontend/app/ui/: titlebar.js
crates/conch_tauri/frontend/styles/: dialogs.css  panels.css  skins.css  tool-windows.css
crates/conch_tauri/frontend/types/: AccountResponse.ts  ActiveSession.ts  DiscoveredPlugin.ts  DownloadProgress.ts  ExportPayload.ts  FileEntry.ts  GeneratedKeyResponse.ts  KeyGenResponse.ts  KeyboardShortcuts.ts  MenuActionEvent.ts  PanelInfo.ts  PluginMenuItem.ts  PtyExitEvent.ts  PtyOutputEvent.ts  ReadFileResult.ts  SaveSettingsResult.ts  SavedLayout.ts  SavedTunnel.ts  ServerEntry.ts  ServerFolder.ts  ServerListResponse.ts  SystemFonts.ts  TerminalDisplayConfig.ts  ThemeColors.ts  TransferKind.ts  TransferProgress.ts  TransferStatus.ts  TunnelInfo.ts  TunnelStatus.ts  TunnelWithStatus.ts  UpdateInfo.ts  VaultStatusResponse.ts
crates/conch_tauri/src/: commands.rs  fonts.rs  lib.rs  menu.rs  pty.rs  pty_backend.rs  settings.rs  theme.rs  updater.rs  utf8_stream.rs  vault_commands.rs  watcher.rs  windows.rs
crates/conch_tauri/src/plugins/: mod.rs  permission_host_api.rs  tauri_host_api.rs
crates/conch_tauri/src/remote/: auth.rs  local_fs.rs  mod.rs  server_commands.rs  sftp.rs  sftp_commands.rs  ssh.rs  ssh_commands.rs  transfer_commands.rs  tunnel.rs  tunnel_commands.rs
crates/conch_tauri/src/tmux/: events.rs  mod.rs
crates/conch_vault/: Cargo.toml
crates/conch_vault/src/: agent.rs  encryption.rs  error.rs  keychain.rs  keygen.rs  lib.rs  lock.rs  model.rs  system_agent.rs
docs/: conch-files.md  plugin-sdk.md  plugin-security-model.md  plugin_extension.md  plugins.md  release-notes-v3.0.0.md
docs/archive/: rewrite-analysis.md
editors/neovim/: .luarc.json  README.md
examples/plugins/: .luarc.json  notes.lua  (+5 more)
java-sdk/: Makefile
plugins/: lua-clipboard-permissions.lua  lua-permission-circumvention-probe.lua
plugins/conch-files/: Cargo.toml  README.md
plugins/conch-files/src/: format.rs  lib.rs  local.rs  pane.rs  remote.rs  sftp_direct.rs
plugins/conch-ssh/: Cargo.toml  README.md
plugins/conch-ssh/src/: config.rs  known_hosts.rs  lib.rs  server_tree.rs  session_backend.rs  sftp.rs  sftp_vtable.rs  ssh_config_parser.rs  tunnel.rs
(+54 files in other folders)
