[workspace]
resolver = "3"
members = [
    "crates/conch_core",
    "crates/conch_plugin_sdk",
    "crates/conch_plugin",
    "crates/conch_remote",
    "crates/conch_tauri",
    "crates/conch_mobile",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Workspace crates
conch_core = { path = "crates/conch_core" }
conch_plugin_sdk = { path = "crates/conch_plugin_sdk" }
conch_plugin = { path = "crates/conch_plugin" }
conch_remote = { path = "crates/conch_remote" }
conch_tauri = { path = "crates/conch_tauri" }

# Serialization (shared)
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6.0"
hostname = "0.4"
base64 = "0.22"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
