[package]
name = "conch_app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform terminal emulator with SSH session management"

[[bin]]
name = "conch"
path = "src/main.rs"

[dependencies]
conch_core = { workspace = true }
conch_session = { workspace = true }
conch_plugin = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
rfd = { workspace = true }

chrono = "0.4"
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

# UI
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"

# Image decoding (icons)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }

# System font discovery
font-kit = "0.14"

# Shell program lookup
which = "7"

# Terminal emulation (for types)
alacritty_terminal = "0.25"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSMenu", "NSMenuItem", "NSApplication", "NSRunningApplication", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSLocale"] }

[package.metadata.deb]
maintainer = "an0nn30"
section = "utils"
depends = "$auto"
assets = [
    ["target/release/conch", "usr/bin/", "755"],
    ["../../packaging/linux/conch.desktop", "usr/share/applications/", "644"],
    ["icons/app-icon.png", "usr/share/icons/hicolor/256x256/apps/conch.png", "644"],
    ["icons/app-icon-512.png", "usr/share/icons/hicolor/512x512/apps/conch.png", "644"],
]

[package.metadata.deb.variants.cross]
depends = "libc6,libgcc-s1,libxcb-render0,libxcb-shape0,libxcb-xfixes0,libxkbcommon0,libwayland-client0,libgtk-3-0,libssl3,libfontconfig1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/conch", dest = "/usr/bin/conch", mode = "755" },
    { source = "../../packaging/linux/conch.desktop", dest = "/usr/share/applications/conch.desktop", mode = "644" },
    { source = "icons/app-icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/conch.png", mode = "644" },
    { source = "icons/app-icon-512.png", dest = "/usr/share/icons/hicolor/512x512/apps/conch.png", mode = "644" },
]
