[package]
name = "conch_core"
version.workspace = true
edition.workspace = true
description = "Config loading, color schemes, and shared types for Conch"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
