[package]
name = "conch_mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conch mobile SSH client — Tauri v2 iOS app"

[lib]
name = "conch_mobile_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
