[package]
name = "conch_pty"
version.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal = "0.25"
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
