[package]
name = "conch_tauri"
version.workspace = true
edition.workspace = true

[dependencies]
conch_core = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
portable-pty = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

# SSH + SFTP
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256"] }
async-trait = "0.1"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
