[package]
name = "conch-ssh"
version.workspace = true
edition.workspace = true
description = "SSH plugin for Conch terminal emulator"

[lib]
crate-type = ["cdylib"]

[dependencies]
conch_plugin_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256"] }
tokio = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"
